update current position.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar">
             <img class="avatar" src="img/avatar.jpeg" alt="Profile Picture">
             <h1>~ Ashley O'Connor ~</h1>
-            <h2>University Student</h2>
+            <h2>Developer / Software Engineering Student</h2>
             <ul>
                 <li><a class="resume" href="resume.pdf" download><img src="./img/cv.png" alt="cv icon"
                             height="40px"></a></li>
