Update about me and meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="University Student. My portfolio of projects. Based in Paynesville, Victoria.">
+    <meta name="description"
+        content="Developer / Software Engineering Student. My portfolio of projects. Based in Paynesville, Victoria.">
     <meta name="title" property="og:title" content="Ash's Portfolio">
     <meta property="og:type" content="Website">
     <title>Ash's Portfolio</title>
@@ -43,7 +44,7 @@
                     <p>
                         <i class="fas fa-graduation-cap"></i>
                         <br>I'm currently pursuing a Bachelor of Information Technology, majoring in Software
-                        Engineering.
+                        Engineering, at La Trobe University.
                         <br><br>
                         <i class="fas fa-laptop-code"></i>
                         <br>My tech journey involves a passion for programming and web
