Add form to live website.

--- a/index.html
+++ b/index.html
@@ -76,25 +76,24 @@
                 </p>
             </div>
         </section>
-        <!-- COMMENTED OUT UNTIL I HAVE LEARNT HOW TO RECEIVE THE SUBMISSIONS TO EMAIL.
-            <section class="contact">  
+        <section class="contact">
             <div class="contact-header">
                 <h2>Contact Me</h2>
             </div>
             <div class="container">
                 <div class="form">
-                    <form id="form" action="index.html" method="get">
+                    <form id="form" action="https://formspree.io/f/xeqyzqne" method="POST">
                         <label for="name">Name:</label><br>
                         <input type="text" id="name" name="name" placeholder="Ash O'Connor" required><br>
                         <label for="email">Email:</label><br>
-                        <input type="email" id="email" name="email" placeholder="name@ashoconnor.dev" required><br>
+                        <input type="email" id="email" name="email" placeholder="ash@ashoconnor.dev" required><br>
                         <label for="comment">Comment:</label><br>
                         <textarea id="comment" name="comment" rows="6" placeholder=""></textarea><br>
+                        <button type="submit" id="submitButton" class="submit-button">Submit</button>
                     </form>
                 </div>
             </div>
-            <input type="button" value="Submit" id="submitButton" class="submit-button">
-        </section> -->
+        </section>
         <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
     </main>
     <footer class="footer">
