Update about me information

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar">
             <img class="avatar" src="img/avatar.jpeg" alt="Profile Picture">
             <h1>~ Ashley O'Connor ~</h1>
-            <h2>Developer / Software Engineering Student</h2>
+            <h2>Developer </h2>
             <ul>
                 <li><a class="resume" href="resume.pdf" download><img src="./img/cv.png" alt="cv icon"
                             height="40px"></a></li>
@@ -43,8 +43,7 @@
                 <div class="aboutme-content">
                     <p>
                         <i class="fas fa-graduation-cap"></i>
-                        <br>I'm currently pursuing a Bachelor of Information Technology, majoring in Software
-                        Engineering, at La Trobe University.
+                        <br>I hold a Diploma of Information Technology from La Trobe University.
                         <br><br>
                         <i class="fas fa-laptop-code"></i>
                         <br>My tech journey involves a passion for programming and web
